--- a/taskmanager/templates/add_task.html
+++ b/taskmanager/templates/add_task.html
@@ -62,7 +62,7 @@
 		<div class="row">
 			<div class="center-align col s12">
 				<button type="submit" class="btn-large light-blue darken-1">
-					Add Task <i class="fa-solid fa-square-plus"></i>
+					Add Task <i class="icon fa-regular fa-square-plus"></i>
 				</button>
 			</div>
 		</div>
