--- a/taskmanager/templates/add_category.html
+++ b/taskmanager/templates/add_category.html
@@ -8,7 +8,7 @@
       <!-- category_name -->  
       <div class="row">
         <div class="input-field col s12">
-            <i class="fa-regular fa-folder-open prefix light-blue-text text-darken-4"></i>
+            <i class=" fa-regular fa-folder-open prefix light-blue-text text-darken-4"></i>
           <input id="category_name" name="category_name" minlength="3" maxlength="25" type="text" class="validate" required>
           <label for="category_name">Category Name</label>
         </div>
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="center-align col s12">
             <button type="submit" class="btn-large light-blue darken-1">
-                Add Category <i class="fa-solid fa-square-plus"></i>
+                Add Category <i class="icon fa-regular fa-square-plus"></i>
             </button>
         </div>
       </div>
