--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -13,7 +13,7 @@
     <header>
         <!-- top navbar -->
         <nav class="light-blue darken-1">
-            <div class="nav-wrapper">
+            <div class="header-content nav-wrapper">
               <a href="{{ url_for('home') }}" class="brand-logo">Task Manager</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fa-solid fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
