--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col s12 center-align">
         <a href="{{ url_for('add_task') }}" class="btn-large light-blue darken-2">
-            Add Task <i class="fa-solid fa-square-plus"></i>
+            Add Task <i class="icon fa-regular fa-square-plus"></i>
         </a>
     </div>
 </div>
